// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`propToStyle() when recives an argument with breakpoints with one breakpoint resolution 1`] = `
Array [
  "@media screen and (min-width:",
  "0",
  "px){",
  "text-align: center;",
  "}",
]
`;

exports[`propToStyle() when recives an argument with breakpoints with two or more breakpoint resolution 1`] = `
Array [
  "@media screen and (min-width:",
  "0",
  "px){",
  "text-align: center;",
  "}",
  "@media screen and (min-width:",
  "768",
  "px){",
  "text-align: right;",
  "}",
]
`;
